--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "almond",
-  "version": "1.0.0",
+  "name": "build_materials",
+  "version": "1.4.8",
   "description": "For multi project",
   "main": "gulpfile.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alex-lenk/almond.git"
+    "url": "git+https://github.com/alex-lenk/build_materials"
   },
   "keywords": [
     "project"
@@ -16,9 +16,9 @@
   "author": "Alex Lenk",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alex-lenk/almond/issues"
+    "url": "https://github.com/alex-lenk/build_materials/issues"
   },
-  "homepage": "https://github.com/alex-lenk/almond#readme",
+  "homepage": "https://github.com/alex-lenk/build_materials#readme",
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "browser-sync": "^2.26.7",
